--- a/package.json
+++ b/package.json
@@ -5,15 +5,26 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon",
-    "test": "jest"
+    "test": "jest",
+    "test:dev": "jest --watch",
+    "test:staged": "jest --passWithNoTests"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "uuidv4": "^6.0.7"
+    "uuidv4": "^6.2.3"
   },
   "devDependencies": {
-    "jest": "^25.2.6",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.2.0",
+    "eslint-config-prettier": "^6.0.0",
+    "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-prettier": "^3.1.0",
+    "git-commit-msg-linter": "^2.4.4",
+    "prettier": "^1.18.2",
+    "husky": "^4.2.5",
+    "jest": "^26.4.0",
+    "lint-staged": "^10.2.11",
     "nodemon": "^2.0.2",
     "supertest": "^4.0.2"
   }
